# nicegraf

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .lfsconfig  CMakeLists.txt  README.md  assets.cmake  build-samples-ios.sh  build-samples.bat  build-samples.sh  build-utils.cmake
.github/workflows/: tests.yml
cmake/: FindVulkanHeaders.cmake
docs/: logo.xcf
docs/doxygen/: Doxyfile  DoxygenLayout.xml  custom.css
docs/doxygen/html/: annotated.html  classes.html  custom.css  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__ngf.html  group__ngf__util.html  index.hhc  index.hhk  index.hhp  index.html  modules.html  nicegraf-util_8h.html  nicegraf-util_8h_source.html  nicegraf_8h.html  nicegraf_8h_source.html  structngf__allocation__callbacks.html  structngf__attachment__description.html  structngf__attachment__descriptions.html  structngf__blend__info.html  structngf__buffer.html  structngf__buffer__bind__info.html  structngf__buffer__info.html  structngf__cmd__buffer.html  structngf__cmd__buffer__info.html  structngf__constant__specialization.html  structngf__context.html  structngf__context__info.html  structngf__depth__stencil__info.html  structngf__device.html  structngf__device__capabilities.html  structngf__diagnostic__info.html  (+30 more)
docs/doxygen/latex/: annotated.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  group__ngf.tex  group__ngf__util.tex  index.tex  modules.tex  nicegraf-util_8h.tex  nicegraf-util_8h_source.tex  nicegraf_8h.tex  nicegraf_8h_source.tex  refman.tex  structngf__allocation__callbacks.tex  structngf__attachment__description.tex  structngf__attachment__descriptions.tex  (+43 more)
include/: metadata_parser.h  nicegraf-mtl-handles.h  nicegraf-util.h  nicegraf-vk-handles.h  nicegraf-wrappers.h  nicegraf.h  nicegraf_util.h  nicegraf_wrappers.h
misc/: shaders.cmake
misc/common/: CMakeLists.txt  check.h  file-utils.cpp  file-utils.h  logging.h  mesh-loader.cpp  mesh-loader.h  shader-loader.cpp  shader-loader.h  targa-loader.cpp  targa-loader.h
priv/: test.txt
samples/: install-submodules
samples/00-template/: sample-impl.cpp
samples/01-fullscreen-triangle/: assets.json  fullscreen-triangle.cpp  sample-impl.cpp
samples/02-render-to-texture/: render-to-texture.cpp
samples/03-uniform-buffers/: assets.json  uniform-buffers.cpp
samples/04-texture-sampling/: assets.json  texture-sampling.cpp
samples/05-cubemap/: assets.json  cubemap.cpp
samples/06-vertex-attribs/: assets.json  vertex-attribs.cpp
samples/07-blinn-phong/: assets.json  blinn-phong.cpp
samples/08-image-arrays/: assets.json  image-arrays.cpp
samples/08-render-to-texture/: render-to-texture.cpp
samples/09-volume-rendering/: assets.json  volume-rendering.cpp
samples/0a-compute-demo/: compute-demo.cpp
samples/0a-compute-mandelbrot/: assets.json  compute-mandelbrot.cpp
samples/0b-compute-vertices/: assets.json  compute-vertices.cpp
samples/0c-render-to-multisample-texture/: assets.json  render-to-multisample-texture.cpp
samples/common/: camera-controller.cpp  camera-controller.h  check.h  common.cpp  common.h  diagnostic-callback.cpp  diagnostic-callback.h  file-utils.cpp  file-utils.h  imgui-backend.cpp  imgui-backend.h  logging.h  main.cpp  mesh-loader.cpp  mesh-loader.h  metalfx.h  metalfx.mm  nicegraf-exception.h  sample-interface.h  shader-loader.cpp  shader-loader.h  staging-image.cpp  staging-image.h  targa-loader.cpp  targa-loader.h
samples/portal/: portal.cpp
samples/shaders/: blinn-phong.hlsl  compute-demo.hlsl  compute-vertices.hlsl  cubemap.hlsl  fullscreen-triangle.hlsl  generic-frag-shader-input.hlsl  imgui.hlsl  instancing.hlsl  polygon.hlsl  quat.hlsl  simple-texture.hlsl  simple_texture.hlsl  textured-quad.hlsl  triangle.hlsl  volume-renderer.hlsl
source/: block_alloc.h  dynamic_array.h  emulated_descriptor_set.c  emulated_descriptor_set.h  frame_token.h  gl_43_core.c  gl_43_core.h  handle_pool.c  handle_pool.h  metadata_parser.c  nicegraf_impl_gl43.c  nicegraf_impl_metal.mm  nicegraf_impl_metal11.mm  nicegraf_impl_vk.c  nicegraf_internal.c  nicegraf_internal.h  nicegraf_util.c  stack_alloc.c  stack_alloc.h  vk_10.c  vk_10.h
source/ngf-common/: arena.cpp  arena.h  array.h  block-alloc.c  block-alloc.h  block_alloc.c  chunk-list.h  chunked-list.h  cmdbuf-state.c  cmdbuf-state.h  cmdbuf_state.c  cmdbuf_state.h  create-destroy.cpp  default-arenas.cpp  default-arenas.h  dict.c  dict.h  dynamic-array.h  dynamic_array.h  format-props.c  frame-token.h  frame_token.h  hashtable.h  internal.c  internal.cpp  list.h  macros.h  metadata_parser.c  native-binding-map.c  native-binding-map.h  native_binding_map.c  native_binding_map.h  nicegraf_internal.c  nicegraf_internal.h  pending-bind-op.h  silence.h  stack-alloc.c  stack-alloc.h  stack_alloc.c  stack_alloc.h  (+4 more)
source/ngf-gl/: gl_43_core.c  gl_43_core.h  impl_43.c
source/ngf-mtl/: applekit-impl.mm  impl.cpp  impl.mm  layer.mm
source/ngf-vk/: ca-metal-layer.mm  impl.c  impl.cpp  vk_10.c  vk_10.h
tests/: CMakeLists.txt  arena-alloc-tests.cpp  block-allocator-test.cpp  block_allocator_test.cpp  common-tests.cpp  dynamic_array_test.cpp  frame-token-test.cpp  frame_token_test.cpp  handle_pool_test.cpp  internal-utils-tests.c  list-test.cpp  main.cpp  native-binding-map-test.cpp  native-biniding-map-test.cpp  nicetest.h  stack_allocator_test.cpp  test-suite-runner.c  vk-backend-tests.c  vk-backend-tests.cpp
tests/image-comparison/: CMakeLists.txt  image-comparison-tests.cpp
tests/image-comparison/common/: check.h  diagnostic-callback.cpp  diagnostic-callback.h  logging.h  run-tests.cpp  shader-loader.cpp  shader-loader.h  test-interface.h  test-util.cpp  test-util.h
tests/image-comparison/framework/: check.h  file-utils.cpp  file-utils.h  main.cpp
tests/image-comparison/references/: triangle_reference.data
tests/image-comparison/testcases/: ngf-triangle-test.cpp
tests/image-comparison/unit-tests/: ngf-triangle-test.cpp
(+75 files in other folders)
